--- a/LEC 21 SSR PROJECT/package.json
+++ b/LEC 21 SSR PROJECT/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^17.2.2",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
